tests/baselines/reference/symbolProperty41.errors.txt
symbolProperty41.ts(2,5): error TS2394: This overload signature is not compatible with its implementation signature.


==== symbolProperty41.ts (1 errors) ====
    class C {
        [Symbol.iterator](x: string): { x: string };
        ~~~~~~~~~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 symbolProperty41.ts:4:5: The implementation signature is declared here.
        [Symbol.iterator](x: "hello"): { x: string; hello: string };
        [Symbol.iterator](x: any) {
            return undefined;
        }
    }
    
    var c = new C;
    c[Symbol.iterator]("");
    c[Symbol.iterator]("hello");
    